# test-ldap

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
app/auth/: routers.py
app/auth/depends/: autho.py  services.py
app/auth/entities/: refresh_token.py
app/auth/models/: refresh_tokens.py
app/auth/schemas/: logout.py  refresh_token.py  refresh_tokens.py  user_autho.py
app/auth/services/: autho.py  dto.py  jwt_tokens.py  ldap_autho.py
app/base/: orm_base.py  pydantic_base.py
app/lib/: __init__.py
app/lib/web/: exeptions.py  models.py  swagger.py
app/ord/: routers.py
app/ord/entities/: orders.py
app/ord/models/: orders.py
app/ord/schemas/: order.py
app/store/: __init__.py
app/store/ldap/: accessor.py  repository.py
app/store/postgres/: accessor.py
app/users/: routers.py
app/users/entities/: departments.py  roles.py  users.py
app/users/models/: __init__.py  departments.py  users.py
app/users/schemas/: departments.py  roles.py  users.py
app/web/: app.py  config.py  lifespan.py  loger.py  routers.py
env/: .example.env  .prod.env
ldap_config/: cn=config.ldif
ldap_config/cn=config/: cn=module{0}.ldif  cn=schema.ldif  olcDatabase={-1}frontend.ldif  olcDatabase={0}config.ldif  olcDatabase={1}mdb.ldif
ldap_config/cn=config/cn=schema/: cn={0}core.ldif  cn={1}cosine.ldif  cn={2}nis.ldif  cn={3}inetorgperson.ldif  cn={4}ppolicy.ldif  (+4 more)
ldap_data/: data.mdb  lock.mdb
tests/: conftest.py  utils.py
tests/test_api/: test_auth.py  test_user.py
(+10 files in other folders)
